# SafeScanEngine

./: .gitignore  HISTORY.md  LICENSE.txt  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  publish.yml  test.yml
models/: electrical_outlet_labelstudio.pt
src/: main.py
src/baby_safe_scan/: __init__.py  encoders.py  folder_utils.py  image_processor.py  model_initializer.py  resolver.py  resolver_yolov8.py  yolov8.py
src/logo_bg_vanisher/: __init__.py  background_remover.py  cropper.py  image_creator.py  remover_pillow.py  remover_rembg.py  saver.py  sizer.py  utils_validation.py
src/models/: yolov8_model.py
src/safe_scan_engine/: encoders.py  folder_utils.py  image_processor.py  model_initializer.py  resolver.py
tests/: test_bg_removal.py  test_cli_pillow.py  test_cli_rembg.py  test_crop.py  test_resize.py  test_yolo_obj_recog.py  test_yolov8resolver.py
