[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BabySafeScan"
version = "0.0.1"
description = "A package to identify non baby-proof items."
authors = [{ name = "Dragos Josan", email = "dragosjosan@gmail.com" }]
license = {file = "LICENSE.txt"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


dependencies = [
    "YOLO",
    "pytest"
]

[tool.setuptools]
package-dir = {"" = "src"}

[project.scripts]
baby_safe_scan = "main:main"

[tool.ruff]
src = ["baby_safe_scan"]
fix = true
show-fixes = true
show-source = true
line-length = 100
ignore-init-module-imports = true


[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
    "W",  # pycodestyle warning
]

[tool.ruff.lint.isort]
force-single-line = true
order-by-type = false
