[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SafeScanEngine"
version = "0.1.0"
description = "A package to identify dangerous non baby-proof items."
authors = [{ name = "Dragos Josan", email = "dragosjosan@gmail.com" }]
license = { file = "LICENSE.txt" }
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "YOLO",
    "pytest",
    "ultralytics",
    "Pillow",
    "pillow_heif"
]

[tool.setuptools]
package-dir = { "" = "src" }


[tool.ruff]
src = ["baby_safe_scan"]
fix = true
show-fixes = true
show-source = true
line-length = 100
ignore-init-module-imports = true

[tool.ruff.lint]
select = [
    "A", # flake8-builtins
    "B", # flake8-bugbear
    "E", # pycodestyle error
    "W", # pycodestyle warning
    "F", # pyflakes
    "I", # isort
    "UP", # pyupgrade
    "PLC", # Pylint
    "PLE", # Pylint
    "PLW" # Pylint
]

[tool.ruff.lint.isort]
force-single-line = true
order-by-type = false
